fix Gherkin